--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
 
   <!-- Custom styles for this template -->
   <link href="navbar.css" rel="stylesheet">
+  <link href="bower_components/chosen/chosen.min.css" rel="stylesheet">  
+  <link href="bower_components/angular-chosen-localytics/chosen-spinner.css" rel="stylesheet">
   <link href="stylesheets/app.css" rel="stylesheet">
 
 </head>
@@ -68,6 +70,8 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
+  <script src="bower_components/chosen/chosen.jquery.min.js"></script>
+  <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
   <script src="app.js"></script>
   <script src="schedule/scheduleModule.js"></script>
   <script src="messages/messagesModule.js"></script>
