--- a/public/employees/employees.html
+++ b/public/employees/employees.html
@@ -1,4 +1,4 @@
-<div class="container roles" ng-switch="showView" ng-cloak>
+<div class="container employees" ng-switch="showView" ng-cloak>
   <div ng-switch-default>
     <div class="page-header">
       <h3>Employees</h3>
