setting up passport

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a ng-show="userName != undefined">{{userName}}</a>
+              <a ng-show="username != undefined">{{username}}</a>
             </li>
         </div>
         <!--/.nav-collapse -->
