--- a/public/login/login.html
+++ b/public/login/login.html
@@ -1,12 +1,19 @@
 <div class="container login" ng-cloak>
   <form class="form-signin">
     <h2 class="form-signin-heading">Please sign in</h2>
-    <label class="sr-only">User Name</label>
-    <input type="text" class="form-control" placeholder="User Name" required autofocus ng-model="username">
-    <label class="sr-only">Password</label>
-    <input type="password" class="form-control" placeholder="Password" required ng-model="password">
-    <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="handleSignIn(username, password)">Sign in</button>
+    <div class="form-group">
+      <label>User Name</label>
+      <input type="text" class="form-control" placeholder="User Name" required autofocus ng-model="username">
+    </div>
+    <div class="form-group">
+      <label>Password</label>
+      <input type="password" class="form-control" placeholder="Password" required ng-model="password">
+    </div>
+    <div class="form-group">
+      <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="handleSignIn(username, password)">Sign in</button>
+    </div>
   </form>
+  <div class="alert alert-danger" role="alert" ng-show="failReason != undefined">{{failReason}}</div>
 
 </div>
 <!-- /container -->
