--- a/public/messages/messages.html
+++ b/public/messages/messages.html
@@ -3,21 +3,48 @@
     <div class="page-header">
       <h3>Messages</h3>
     </div>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>title</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="message in messages" ng-click="handleSelectMessage(message)">
-          <td>{{message.content.title}}</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="form-group">
+      <button type="button" class="btn btn-success" ng-click="handleShowMessageCreator()">Create New</button>
+    </div>
+    <div class="row">
+      <div class="col-sm-4" ng-repeat="message in messages">
+        <div class="thumbnail">
+          <div class="caption">
+            <h3 class="from">{{message.from.name}}</h3>
+            <div class="row">
+              <h4 class="col-sm-12 title">{{message.content.title}}</h4>
+            </div>
+            <div class="row">
+              <h4 class="col-sm-6">Received:</h4>
+              <h4 class="col-sm-6">{{message.send | date:'yyyy-MM-dd h:mma'}}</h4>
+            </div>
+            <div class="row read-button">
+              <button type="button" class="btn btn-primary" ng-click="handleSelectMessage(message)">Read</button>
+            </div>
+          </div>
 
-    <button type="button" class="btn btn-success" ng-click="handleShowMessageCreator()">Create New</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
+
+  <div ng-switch-when='message'>
+    <div class="panel panel-primary">
+      <div class="panel-heading">Message from {{selectedMessage.from.name}}</div>
+      <div class="panel-body">
+        <h3>{{selectedMessage.from.name}}</h3>
+        <div class="row">
+          <h4 class="col-sm-6">Received:</h4>
+          <h4 class="col-sm-6">{{selectedMessage.send | date:'yyyy-MM-dd h:mma'}}</h4>
+        </div>
+        <div>{{selectedMessage.content.body}}</div>
+      </div>
+      <div class="panel-footer">
+        <button type="button" class="btn btn-success" ng-click="handleConfirmMessage(selectedMessage)">Confirm</button>
+        <button type="button" class="btn btn-default" ng-click="handleCancelMessage()">Cancel</button>
+      </div>
+    </div>
   </div>
 
   <div ng-switch-when='editor'>
