--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,6 @@
   <!-- Custom styles for this template -->
   <link href="navbar.css" rel="stylesheet">
   <link href="bower_components/chosen/chosen.min.css" rel="stylesheet">
-  <link href="bower_components/angular-chosen-localytics/chosen-spinner.css" rel="stylesheet">
   <link href="stylesheets/app.css" rel="stylesheet">
 
 </head>
@@ -51,6 +50,7 @@
               <ul class="dropdown-menu">
                 <li><a href="#/employees">Employees</a></li>
                 <li><a href="#/roles">Roles</a></li>
+                <li><a href="#/scheduler">Scheduler</a></li>
               </ul>
             </li>
           </ul>
@@ -75,8 +75,9 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="bower_components/chosen/chosen.jquery.min.js"></script>
-  <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
+  <script src="bower_components/angular-chosen-localytics/chosen.js"></script>  
   <script src="app.js"></script>
   <script src="schedule/scheduleModule.js"></script>
   <script src="messages/messagesModule.js"></script>
@@ -85,6 +86,7 @@
   <script src="roles/rolesModule.js"></script>
   <script src="employees/employeesModule.js"></script>
   <script src="login/loginModule.js"></script>
+  <script src="scheduler/schedulerModule.js"></script>
 
 
 </body>
