improving error handling

--- a/public/schedule/schedule.html
+++ b/public/schedule/schedule.html
@@ -41,7 +41,7 @@
         </select>
       </div>
       <div class="panel-footer">
-        <button type="button" class="btn btn-primary" ng-click="handleAskAll(selectedShift, swappers)">Ask All</button>
+        <button type="button" class="btn btn-primary" ng-click="handleAskAll(selectedShift, selectedSwappers)">Ask All</button>
         <button type="button" class="btn btn-success" ng-click="handleAskSelected(selectedShift, selectedSwappers)">Ask Selected</button>
         <button type="button" class="btn btn-default" ng-click="handleCancelEdit()">Cancel</button>
       </div>
